[package]
name = "isox_comms"
version = "0.1.0"
authors = ["Steve Strong <steve@id3as.co.uk>"]
edition = "2021"

[dependencies]
socket2 = "0.5.6"
byteorder = "1.5.0"
nix = { version = "0.27.1", features = ["process", "socket", "fs", "uio"] }
libc = "0.2.153"
rand = "0.8.5"

[target.'cfg(target_os = "macos")'.dependencies]
uuid = "1.8.0"
